fix(Text): Add width 100% to make text-align to take effect

--- a/src/components/typography/Text/Text.module.scss
+++ b/src/components/typography/Text/Text.module.scss
@@ -1,4 +1,5 @@
 .text {
+  width: 100%;
   text-wrap: pretty;
 
   &--hyphens-manual {
